@@ -83,8 +83,8 @@ module Padrino
       end
 
       # Returns the app_name for the application at root
-      def fetch_app_name(root=nil)
-        app_path = root ? File.join(root, 'app/app.rb') : 'app/app.rb'
+      def fetch_app_name(app='app')
+        app_path = destination_root(app, 'app.rb')
         @app_name ||= File.read(app_path).scan(/class\s(.*?)\s</).flatten[0]
       end
 
