@@ -2,6 +2,9 @@
 
 == 0.9.6 (unreleased)
 
+* Fixed an issue in controller generator when using --app=app_name
+* Added mm:transate task for easily translate models
+* Updated favicon_tag to search inside images folder 
 * Fixes an issue with rendering with layout false now you can use: render 'path/to/template', :layout => false
 * Small helpers refactoring
 
